# smpl_agent

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  SOUL.md  hms20x_momentum_sol.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: test.yml  tests.yml
docs/: linkedin-google-login-research.md
migrations/: 001_initial.sql  002_fix_memories_vector_dimensions.sql  002_marketing.sql  003_fix_memories_vector_1024.sql  003_linkedin.sql  004_reddit.sql  005_instagram.sql
scripts/: test_linkedin_login.py
src/: agent.py  auto_memory.py  auto_recall.py  calendar_store.py  client.py  config.py  context.py  daemon.py  db.py  email_store.py  embeddings.py  encryption.py  events.py  formatting.py  history.py  hyperliquid_store.py  indicators.py  llm.py  main.py  marketing_store.py  memory.py  protocol.py  repos.py  scheduler.py  scrub.py  server.py  strategy_executor.py  subagent.py  telegram.py  temp_files.py  transcription.py
src/marketing/: __init__.py  base.py  email_helper.py  instagram.py  linkedin.py  platform_knowledge.py  reddit.py  twitter.py
src/tools/: __init__.py  base.py  brave_search.py  browser.py  calendar.py  codex.py  email.py  github.py  hyperliquid.py  instagram.py  linkedin.py  marketing.py  memory.py  reddit.py  registry.py  repos.py  scheduler.py  shell.py  subagent.py
tests/: conftest.py  test_agent.py  test_auto_memory.py  test_auto_recall.py  test_brave_search.py  test_browser_tool.py  test_calendar_store.py  test_calendar_tool.py  test_client.py  test_codex.py  test_config.py  test_context.py  test_daemon.py  test_email_helper.py  test_email_store.py  test_email_tool.py  test_embeddings.py  test_events.py  test_formatting.py  test_github.py  test_history.py  test_hyperliquid_store.py  test_hyperliquid_tool.py  test_indicators.py  test_instagram_adapter.py  test_instagram_tool.py  test_linkedin_adapter.py  test_linkedin_tool.py  test_llm.py  test_main.py  test_marketing_store.py  test_marketing_tool.py  test_memory.py  test_memory_tool.py  test_platform_knowledge.py  test_protocol.py  test_reddit_adapter.py  test_reddit_tool.py  test_registry.py  test_repos.py  (+10 more)
(+3 files in other folders)
