[project]
name = "agent"
version = "0.1.0"
description = "Terminal-based AI agent with tool calling"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "croniter>=1.3",
    "caldav>=1.3",
    "imap-tools>=1.5",
    "hyperliquid-python-sdk>=0.22,<1.0",
    "eth-account>=0.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.22",
]
transcription = [
    "torch>=2.0",
    "transformers>=4.36",
    "accelerate>=0.25",
    "imageio-ffmpeg>=0.4",
]

[project.scripts]
agent = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
