[project]
name = "agent"
version = "0.1.0"
description = "Terminal-based AI agent with tool calling"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psycopg2-binary>=2.9",
    "croniter>=1.3",
    "caldav>=1.3",
    "imap-tools>=1.5",
    "cryptography>=41.0",
    "icalendar>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.12",
    "respx>=0.22",
]
tokens = [
    "tiktoken>=0.5",
]
browser = [
    "browser-use>=0.1",
    "langchain-openai>=0.1",
]
marketing = [
    "browser-use>=0.1",
    "langchain-openai>=0.1",
    "patchright>=1.0",
]
transcription = [
    "torch>=2.0",
    "transformers>=4.36",
    "accelerate>=0.25",
    "imageio-ffmpeg>=0.4",
]

[project.scripts]
agent = "src.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
